--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     "build": "rimraf dist && rimraf adapter && rimraf link && rimraf types && tsc -p tsconfig.build.json && shx mv dist/* . && rimraf dist"
   },
   "peerDependencies": {
-    "@trpc/client": "10.9.1",
-    "@trpc/server": "10.9.1"
+    "@trpc/client": "^10.9.1",
+    "@trpc/server": "^10.9.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
-    "@types/amqplib": "^0.8.2",
     "@types/jest": "^29.1.2",
     "@types/node": "^18.8.5",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
