--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "peerDependencies": {
     "@trpc/client": "^10.9.1",
-    "@trpc/server": "^10.9.1"
+    "@trpc/server": "^10.9.1",
+    "mqtt": "^4.3.7"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
@@ -41,9 +42,5 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "zod": "^3.19.1"
-  },
-  "dependencies": {
-    "@types/mqtt": "^2.5.0",
-    "mqtt": "^4.3.7"
   }
 }
